[package]

name = "cantal"
description = "The monitoring agent"
license = "MIT"
readme = "README.rst"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.4.10"
authors = ["paul@colomiets.name"]

[dependencies]
rustc-serialize = "0.3"
cbor = "0.3"
libc = "0.2"
regex = "0.1"
argparse = "0.2"
rand = "0.3"
nix = "0.4"
mime = "0.1"
httparse = "1.1"
unicase = "1.1"
hyper = "0.7"
num = "0.1"
websocket = "0.14"
byteorder = "0.5.1"
anymap = "0.11"
fern = "0.3"
log = "0.3"
matches = "0.1"
mio = "0.5"
quire = "0.1.5"
rotor = "0.6.3"
rotor-carbon = "0.6.0"
rotor-tools = "0.3.2"
scan_dir = "0.3.3"

[dependencies.probor]
version = "0.2.0"
features = ["regex_serde"]

[dependencies.cantal_values]
path = "cantal_values"

[dependencies.cantal_history]
path = "cantal_history"

[dependencies.cantal_query]
path = "cantal_query"

[dependencies.time]
version = "0.1"
features = ["rustc-serialize"]

[[bin]]
name = "cantal-agent"
path = "src/agent/main.rs"


