[package]

name = "cantal"
description = "The monitoring agent"
license = "MIT"
readme = "README.rst"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.5.9"
authors = ["paul@colomiets.name"]

[dependencies]
rustc-serialize = "0.3"
cbor = "0.4.0"
libc = "0.2.20"
regex = "0.2.1"
argparse = "0.2"
rand = "0.3.15"
nix = "0.7.0"
mime = "0.1.3"  # should match hyper
httparse = "1.2.1"
unicase = "1.1"
hyper = "0.7"
num = "0.1.36"
websocket = "0.14"
byteorder = "1.0.0"
anymap = "0.12.1"
fern = "0.4.3"
log = "0.3"
matches = "0.1.4"
mio = "0.5"
quire = "0.3.1"
scan_dir = "0.3.3"
humantime = "1.0.0"
lazy_static = "1.0.0"
self-meter = "0.6.0"
futures = "0.1.10"
tokio-core = "0.1.4"
tk-easyloop = "0.1.1"
tk-carbon = "0.2.0"
abstract-ns = "0.4.2"
ns-std-threaded = "0.3.0"
ns-router = "0.1.4"
futures-cpupool = "0.1.3"
quick-error = "1.1.0"
void = "1.0.2"
serde = {version="1.0.0", features=["rc"]}
serde_derive = "1.0.0"
serde_json = "1.0.0"
libcantal = "0.3.2"

[dependencies.probor]
version = "0.3.0"
features = ["regex_serde"]

[dependencies.cantal_values]
path = "cantal_values"

[dependencies.cantal_history]
path = "cantal_history"

[dependencies.cantal_query]
path = "cantal_query"

[dependencies.time]
version = "0.1.36"
features = ["rustc-serialize"]

[[bin]]
name = "cantal-agent"
path = "src/main.rs"

[profile.release]
debug = true
lto = true

[workspace]
