[package]

name = "cantal"
description = "The monitoring agent"
license = "MIT"
readme = "README.rst"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.6.4"
authors = ["paul@colomiets.name"]

[dependencies]
rustc-serialize = "0.3"
cbor = "0.4.0"
libc = "0.2.20"
regex = "1.0.0"
argparse = "0.2"
rand = "0.5.0"
nix = "0.10.0"
httparse = "1.2.1"
num = "0.1.36"
byteorder = "1.0.0"
anymap = "0.12.1"
log = "0.4.1"
env_logger = "0.5.9"
matches = "0.1.4"
quire = "0.4.0"
scan_dir = "0.3.3"
humantime = "1.0.0"
lazy_static = "1.0.0"
self-meter-http = "0.4.1"
failure = "0.1.0"
futures = "0.1.21"
tokio-core = "0.1.10"
tokio-io = "0.1.4"
tk-easyloop = "0.1.1"
tk-carbon = "0.2.0"
tk-listen = "0.1.1"
tk-bufstream = "0.3.0"
abstract-ns = "0.4.2"
ns-std-threaded = "0.3.0"
ns-router = "0.1.5"
futures-cpupool = "0.1.3"
quick-error = "1.1.0"
void = "1.0.2"
serde = {version="1.0.0", features=["rc"]}
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_cbor = "0.8.2"
tk-http = "0.3.5"
http-file-headers = "0.1.3"
ns-env-config = "0.1.0"
hex = "0.3.1"
slab = "0.4.0"
libcantal = "0.3.2"
#juniper = { version="0.9.2", default-features=false }
juniper = { git="https://github.com/graphql-rust/juniper", rev="56f71e9" }
graphql-parser = "0.2.0"

[dependencies.probor]
version = "0.3.1"
features = ["regex_serde"]

[dependencies.cantal_values]
path = "cantal_values"

[dependencies.cantal_history]
path = "cantal_history"

[dependencies.cantal_query]
path = "cantal_query"

[dependencies.time]
version = "0.1.36"
features = ["rustc-serialize"]

[[bin]]
name = "cantal-agent"
path = "src/main.rs"

[profile.release]
debug = true

[workspace]
