[package]

name = "cantal_history"
description = "The compressed in-memory history storage for cantal statistics"
license = "MIT"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.3.7"
authors = ["paul@colomiets.name"]

[dependencies]
log = "0.3"
num = "0.1"
rustc-serialize = "0.3"
cbor-codec = "0.5.0"
probor = "0.2.0"
byteorder = "0.5.1"

[dependencies.cantal_values]
path = "../cantal_values"

[lib]
name = "cantal_history"

