[package]

name = "cantal_history"
description = "The compressed in-memory history storage for cantal statistics"
license = "MIT"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.6.3"
authors = ["paul@colomiets.name"]

[dependencies]
log = "0.3"
num = "0.1.36"
rustc-serialize = "0.3.22"
cbor-codec = "0.7.1"
probor = "0.3.0"
byteorder = "1.0.0"

[dependencies.cantal_values]
path = "../cantal_values"

[lib]
name = "cantal_history"

