[package]

name = "cantal_query"
description = "The query language and processor for cantal statistics"
license = "MIT"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.5.4"
authors = ["paul@colomiets.name"]

[dependencies]
log = "0.3"
cbor-codec = "0.7.1"
rustc-serialize = "0.3.22"
regex = "0.2.1"
num = "0.1.36"

[dependencies.probor]
version = "0.3.0"
features = ["regex_serde"]

[dependencies.cantal_values]
path = "../cantal_values"

[dependencies.cantal_history]
path = "../cantal_history"

[lib]
name = "cantal_query"
path = "src/lib.rs"
