[package]

name = "cantal_values"
description = "The parser of cantal file format"
license = "MIT"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.4.6"
authors = ["paul@colomiets.name"]

[dependencies]
byteorder = "0.5.1"
rustc-serialize = "0.3"
log = "0.3"
libc = "0.2"
probor = "0.2.0"
quick-error = "1.0.0"
argparse = "0.2.1"

[[bin]]
name = "cantal"
path = "src/bin/cli.rs"

