[package]

name = "cantal_values"
description = "The parser of cantal file format"
license = "MIT"
keywords = ["monitoring", "statistics"]
homepage = "http://github.com/tailhook/cantal"
version = "0.5.7"
authors = ["paul@colomiets.name"]

[dependencies]
byteorder = "1.1.0"
rustc-serialize = "0.3.22"
log = "0.3.8"
libc = "0.2.33"
probor = "0.3.0"
quick-error = "1.2.1"
argparse = "0.2.1"

[[bin]]
name = "cantal"
path = "src/bin/cli.rs"

